<resources>

    <string name="app_cancel">Cancel</string>
    <string name="app_check">Check</string>
    <string name="app_copied">Copied</string>
    <string name="app_delete">Delete</string>
    <string name="app_ok">OK</string>
    <string name="app_reload">Refresh</string>
    <string name="app_save">Save</string>
    <string name="app_undo">Undo</string>
    <string name="app_unnamed">Unnamed</string>

    <string name="settings_title">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_summary">Change the app theme</string>
    <string name="settings_theme_dark">Dark theme</string>
    <string name="settings_theme_light">Light theme</string>
    <string name="settings_theme_doge">Doge theme</string>
    <string name="settings_theme_eleven">11 theme</string>
    <string name="settings_theme_ada">Ada theme</string>
    <string name="settings_conversions">Conversions</string>
    <string name="settings_add_conversion">Add conversion</string>
    <string name="settings_using_conversion">%s from %s</string>
    <string name="settings_delete_conversion_title">Delete conversion</string>
    <string name="settings_delete_conversion_message">Do you want to delete the conversion to %s given by %s?</string>
    <string name="settings_delete_conversion_cancel">Cancel</string>
    <string name="settings_delete_conversion_delete">Delete</string>
    <string name="settings_add_conversion_cancel">Cancel</string>
    <string name="settings_add_conversion_step_1">Choose a currency</string>
    <string name="settings_add_conversion_step_2">Choose a provider</string>
    <string name="settings_add_conversion_repeated">You already have %s given by %s</string>

    <string name="home_empty_hint">Welcome to Bitcoin Address Checker App (BitAC).\n\nYou can click on Check Address any time you want to see how many bitcoins an address has.\n\nAll of your saved addresses will appear here for easy access.\n\nEnjoy the app!</string>
    <string name="home_deleted_address_message">The address %s was deleted</string>

    <string name="check_address_title">Check address</string>
    <string name="check_address_input_hint">Click on the QR code icon to read the bitcoin address with your camera.  You can also type or paste the address into the text field below.</string>
    <string name="check_address_qr_hint">Point to address QR code\n</string>
    <string name="check_address_save_hint">You can see the address balance below.  You can also choose a name and save to easily check the address in the future.</string>
    <string name="check_address_address">Address</string>
    <string name="check_address_name">Name</string>
    <string name="check_address_action_change">Change</string>
    <string name="check_address_qr_code_fail">Failed to read the address</string>
    <string name="check_address_invalid_address">Invalid address</string>

    <string name="address_copy_address">Copy address</string>
    <string name="address_copy_address_label">Address</string>
    <string name="address_copy_balance">Copy balance</string>
    <string name="address_copy_balance_label">Balance</string>

    <string name="error_message_unknown">An unknown error has occurred.</string>
    <string name="error_message_unauthorized">Unauthorized by the server</string>
    <string name="error_message_no_connection">The communication with the server has failed. Please verify your connection.</string>

    <string name="about_title">About</string>
    <string name="about_description">Easy and quick way to check the balance of bitcoin addresses.</string>
    <string name="about_text">
        <![CDATA[
            <p>Bitcoin Address Checker (<b>BitAC</b>) is an open-source application designed to be lightweight and fast. The idea is to provide Android users an easy and quick way to check the balance of bitcoin addresses.</p>
            <p>This application does not provide and is not intended to provide any functionality of a bitcoin wallet, so you can not receive, send or save bitcoins with BitAC, you can only check how many bitcoins a wallet has.</p>
            <p>If you like to report a problem, propose a solution, or ask questions, you can go to the application repository at the following address: <a href="https://github.com/ademar111190/BitAC"> https://github.com/ademar111190/BitAC</a> you can also send an email to <a href="mailto:ademar111190@gmail.com">ademar111190@gmail.com</a>.</p>
            <p>All contributions are welcome, from text corrections to new languages translations, from design improvements to a full UX/UI redesign, from a simple bug-fix to a new feature, please feel free to contribute.</p>
            <p>The application uses the <a href="https://blockchain.info/api">blockchain.info</a> API, ideally it would have its own service, however to maintain a server would cost money, so if you want to contribute to the project financially you can donate bitcoin to the following address: <a href="bitcoin:1DPYudPDKLxnFkTtDUbWrEZZhfbuHoWgX8">1DPYudPDKLxnFkTtDUbWrEZZhfbuHoWgX8</a>.  Thanks!</p>
        ]]>
    </string>

</resources>
