<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/output_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/output_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="?attr/theme_font"
        android:gravity="center"
        android:maxWidth="264dp"
        android:text="@string/check_address_save_hint"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/output_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_hint"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.6"
        android:fontFamily="?attr/theme_font"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="1MbRhH2duuUY5KzubRUFWfaT9gsYpacwjCs"/>

    <TextView
        android:id="@+id/output_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_address"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="?attr/theme_font"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:text="1.23456789 BTC"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/output_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_balance"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/output_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="?attr/theme_font"
            android:hint="@string/check_address_name"
            android:imeOptions="actionSend"
            android:inputType="text"
            tools:ignore="RtlSymmetry"
            tools:text="A cool name"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/output_change"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output_name_layout"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@+id/output_save"
        android:fontFamily="?attr/theme_font"
        android:text="@string/check_address_action_change"/>

    <Button
        android:id="@+id/output_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/output_name_layout"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="?attr/theme_font"
        android:text="@string/app_save"/>

    <ProgressBar
        android:id="@+id/output_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/output_name_layout"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
