<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/toolbar_background"
        android:elevation="?attr/toolbar_elevation"
        app:title="@string/app_name"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="?android:attr/actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/transparent"
            tools:listitem="@layout/item_address"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/reload"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="?attr/theme_font"
        android:text="@string/app_reload"/>

    <ScrollView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxWidth="264dp"
                android:text="@string/home_empty_hint"
                android:textColor="?attr/primary_text"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/flat_button_bg"
        android:elevation="8dp"
        android:fontFamily="?attr/theme_font"
        android:text="@string/check_address_title"
        android:textAllCaps="true"
        android:textColor="?attr/flat_text"
        android:textStyle="bold"
        app:layout_behavior="ademar.bitac.view.ActionButtonBehavior"/>

</android.support.design.widget.CoordinatorLayout>
